--- a/src/05-features/Login/Login.module.css
+++ b/src/05-features/Login/Login.module.css
@@ -2,6 +2,11 @@
   height: 120px;
   width: 120px;
   margin: 0 auto 10px auto;
+  transition: all 0.5s ease;
+}
+
+.logo:hover {
+  transform: scale(1.1);
 }
 
 .hr {
